work in progress

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="box">
       <input type="text" id="search-box" />
       <ul class="country-list"></ul>
-
-    <script src="/index.js" type="module"></script>
+      <div class="country-info"></div>
+    </div>
   </body>
 </html>
