--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <div class="box">
-      <input type="text" id="search-box" />
-      <ul class="country-list"></ul>
-      <div class="country-info"></div>
+      <input
+        type="text"
+        id="search-box"
+        placeholder="Введите название страны"
+      />
+      <ul class="country-list visually-hidden"></ul>
+      <div class="country-info visually-hidden"></div>
     </div>
   </body>
 </html>
