--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <input
         type="text"
         id="search-box"
-        placeholder="Введите название страны"
+        placeholder="Typing the country name..."
       />
       <ul class="country-list visually-hidden"></ul>
       <div class="country-info visually-hidden"></div>
